manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-app
  labels:
    app: welcome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
        - name: welcome
          image: dragz17/sltr-devops-boy:latest
          ports:
            - containerPort: 5000
