manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
spec:
  selector:
    app: welcome
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
